<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chef\'s</string>
    <string name="todo">TODO</string>
    <string name="recipes">Recipes</string>
    <string name="skip">Skip</string>
    <string name="chef_s_table">Chef\'s Table</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="change_language">Change Language</string>
</resources>